--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,44 @@ transition: 0.6s;
 	 }
 	 .container{
 		 height: 300px;
-		 width: 500px;
+		 width: 300px;
 		 margin: auto;
 		 background-color: #66a3ff;
-	 }
+		 border: 1px solid #66a3ff;
+		 border-radius: 50%;
+		}
+		.container img{
+			width: 100%;
+		}
+		.portfolio{
+    width: 1000px;
+    margin: auto;
+    background-color: #d1d8d8;
+    height: 400px;
+}
+		.portfolio .content{
+    float: left;
+    /* display: block; */
+    width: 30.33%;
+    /* box-sizing: border-box; */
+    /* padding: 12px; */
+    background-color: white;
+    margin: 10px;
+}
+		.portfolio .content .pic{
+    /* width: 33.33%; */
+}
+.portfolio .content .pic img{
+	
+width: 100%;
+}
+.description{
+
+}
+.description h4{
+
+}
+.description p{
+
+}
+.content-child{}
