--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,12 @@ transition: 0.6s;
 		.container img{
 			width: 100%;
 		}
+
+
+		/*asssignment */
+		.clearfix{
+			clear: both;
+		}
 		.portfolio{
     width: 1000px;
     margin: auto;
@@ -205,7 +211,7 @@ font-family: sans-serif;
 line-height: 15px;
 }
 .content-child{
-    padding: 0px 14px;
+    padding: 10px 14px;
 }
 .design{
 	background-image: url(../images/Group_33094_1.png);
@@ -214,4 +220,49 @@ line-height: 15px;
 	margin: auto;
 	background-repeat: no-repeat;
 	background-size: cover;
+	font-family: sans-serif;
+	margin-top: 60px;
+}
+.design h2{
+    /* margin: 10px; */
+    display: inline-block;
+    padding: 75px 60px;
+    font-size: 40px;
+    color: white;
+    text-transform: c;
+}
+.design a{
+    float: right;
+    text-decoration: none;
+    color: #ffff;
+    font-size: 18px;
+    margin: 90px 60px;
+    background-color: tomato;
+    padding: 10px;
+    border-radius: 5px;
+}
+.a{
+	height: 400px;
+}
+.front-page{
+	width: 1000px;
+	margin: auto;
+	height: 449px;
+}
+.intro{
+	width: 42%;
+	float: left;
+}
+.myself{
+	font-family: sans-serif;
+}
+.myself h1{}
+.myself span{}
+.myself p{}
+.profile{
+	width: 100%;
+	
+}
+.profile img{
+	width: 100%;
 }
