--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
 	padding: 0px;
 	margin:0px;
+	/* padding: 10px 10px; */
 }
  
  .banner{
@@ -106,7 +107,7 @@ transition: 0.6s;
  	 		margin-top: 40px;
  	 		font-family: sans-serif;
  	 	}
- 	 	.about{
+ 	 	.about1{
  	 		float: left;
  	 		width: 400px;
  	 		margin: 25px;
@@ -255,14 +256,30 @@ line-height: 15px;
 }
 .myself{
 	font-family: sans-serif;
+	margin-top: 50px;
 }
-.myself h1{}
-.myself span{}
-.myself p{}
+.myself h1{
+    font-size: 50px;
+    padding-right: 80px;
+}
+.myself span{
+    color: orange;
+    /* font-size: 50px; */
+}
+.myself p{
+    padding: 20px 100px 20px 0px;
+    line-height: 25px;
+    font-size: 14px;
+}
 .profile{
 	width: 100%;
-	
+	padding-left: 100px;
 }
 .profile img{
 	width: 100%;
+}
+.about{
+	width: 1000px;
+	margin: auto;
+	height: 449px;
 }
